popup.html needs implementation

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
 {
-   "browser_action": {
-      "default_icon": "icon.png",
-      "default_title": "SFW Barstool"
-   },
-   "content_scripts": [ {
-      "js": [ "sfwBarstool.js" ],
-      "matches": [ "http://*.barstoolsports.com/*" ]
-   } ],
-   "description": "SFW Barstool, blacklists a series of words and removes pictures associated with matching stories with blacklisted titles.",
-   "icons": {
-      "128": "icon.png"
-   },
-   "manifest_version": 2,
-   "name": "SFW Barstool",
-   "version": "1"
+	"browser_action": {
+		"default_icon": "icon.png",
+      		"default_title": "SFW Barstool\nClick to set blacklist",
+		"popup": "popup.html"
+   	},
+   	"content_scripts": [ {
+      		"js": [ "sfwBarstool.js" ],
+      		"matches": [ "http://*.barstoolsports.com/*" ]
+   	} ],
+   	"description": "SFW Barstool, blacklists a series of words and removes pictures associated with matching stories with blacklisted titles.",
+   	"icons": {
+      		"128": "icon.png"
+   	},
+   	"manifest_version": 2,
+   	"name": "SFW Barstool",
+   	"version": "1"
 }
